2 Fixes en registrar-usuario
- Arreglado el boton registrar que cada vez que saltaba un error se corria para abajo

- Arreglado el error que, a veces, si ponias una fecha que correspondia a un menor de edad saltaba el cartel "Ha ocurrido un error. Por favor, inténtelo nuevamente." cuando en realidad tenia que salir el cartel "Para registrarse en TruequeTools debe ser mayor de edad"

--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -16,8 +16,8 @@
     align-items: center;
     flex-direction: column;
     display: flex;
-    width: 46rem;
-    height: 42rem;
+    width: 44rem;
+    height: 45rem;
     background-color: #f2ada7;
     border-radius: 1rem;
     border-color: black;
@@ -88,4 +88,8 @@
 
 .container-signup div{
     margin-bottom: 6px;
+}
+
+.container-signup .error-message{
+    margin-bottom: 0px;
 }
