Pequeña actualizacion de estilo
Actualizados los estilos de: AdminView, verEmpleados, verSucursales, agregarEmpleados, agregarSucursales

--- a/src/styles/adminView.css
+++ b/src/styles/adminView.css
@@ -72,5 +72,8 @@ body {
 
 .add-remove-branch-container input,.add-remove-branch-container button{
     margin: 3% auto !important;
+}
 
+.admin-view-container button{
+    margin-left: 5px;
 }
