--- a/src/styles/TradeCheck.css
+++ b/src/styles/TradeCheck.css
@@ -1,95 +1,40 @@
-.container {
-    text-align: center;
+.trade-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+  
+.trade-box {
+    border: 1px black solid;
+    background-color: #d3d3d3;
+    border-radius: 6px;
     padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.120) 0px 20px 30px -10px;
 }
 
-.title {
-    margin-bottom: 20px;
+.trade-button {
+    margin-right: 2px;
 }
 
-.button-group {
-    margin-bottom: 20px;
-}
-
-.button-group button {
-    margin: 0 5px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.button-group button:hover {
-    background-color: #0056b3;
-}
-
-.form {
+.trade-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
-.form-group {
+.trade-form-group {
     margin-bottom: 10px;
     display: flex;
-    align-items: center;
 }
 
-.form-group select,
-.form-group input {
-    margin-right: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.form-group button {
+.trade-input {
+    margin-left: 5px;
     margin-right: 5px;
-    padding: 8px;
-    border: none;
-    border-radius: 5px;
-    background-color: #dc3545;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
+    width: 70px;
 }
 
-.form-group button:hover {
-    background-color: #bd2130;
-}
-
-.add,
-.remove {
-    padding: 5px 10px;
-    font-size: 16px;
-    background-color: #28a745;
-}
-
-.add:hover,
-.remove:hover {
-    background-color: #218838;
-}
-
-.registrar {
-    margin-top: 10px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.registrar:hover {
-    background-color: #0056b3;
-}
-
-.registrar:disabled {
-    background-color: #6c757d;
-    cursor: not-allowed;
+.trade-add {
+    width: 91%;
+    margin-bottom: 5px;
 }
