--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -180,7 +180,16 @@
 
 }
 
+.button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.button-wrapper {
+    display: flex;
+    gap: 10px;
+}
 
 .custom-file-upload {
     cursor: pointer;
