--- a/src/styles/SelectProduct.css
+++ b/src/styles/SelectProduct.css
@@ -1,10 +1,20 @@
 .intercambiar-container {
-    padding: 20px;
+    display: relative;
+    flex-direction: column;
+    min-height: 100vh;
     text-align: center;
+    overflow: hidden;
+}
+
+.selected-box {
+    position: absolute;
+    bottom: 5rem;
+    left: 50%;
+    transform: translateX(-50%);;
+    align-items: center;
 }
 
 .selected-title {
-    margin: 20px 0;
     font-size: 1.5em;
     color: #333;
 }
@@ -24,8 +34,8 @@
 }
 
 .input-horario {
+    width: 15rem;
     margin: 10px 0;
-    display: block;
 }
 
 .success-message {
