--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -38,9 +38,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.container-signup form{ /* Formulario */
-    width: 50rem;
-    height: 16rem;
+.container-signup .signup-form{ /* Formulario */
     font-size: 1.4rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
@@ -86,8 +84,19 @@
     width: 48%;
 }
 
+.container-signup p{
+    margin: 4px;
+}
+
 .container-signup div{
     margin-bottom: 6px;
+}
+
+.container-signup .signup-botones{
+    display:flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 10px;    
 }
 
 .container-signup .error-message{
