--- a/src/styles/userPosts.css
+++ b/src/styles/userPosts.css
@@ -1,3 +1,43 @@
+.misPost-navigation-bar{
+    display: relative;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 70px;
+    background-color: #f2ada7;
+    padding: 10px;
+    margin-bottom: 50px;
+    background: linear-gradient(to right,#f2ada7, #f5c8c4);
+    border-bottom: 1px solid #000000;
+}
+
+.misPost-navigation-bar .misPost-link-volver{
+    position: absolute;
+    top: 5.5%;
+    left: 60px;
+}
+
+.misPost-button {
+    display: inline-block;
+    background-color: #D88479;
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    transform: translateY(-50%);
+}
+
+.misPost-button:hover {
+    background-color: #f2f0e4;
+    color: #bf4c41;
+    transition: color 0.2s;
+    transition: transform 0.3s ease;
+}
+
 .no-prods {
     position: fixed;
     top: 50%;
@@ -24,11 +64,16 @@
     }
 }
 
-.titulo {
-
+.misPost-titulo {
+    margin-bottom: 20px;
     text-align: center;
-    font-size: 2rem;
     color: #333;
-    margin-top: 20px;
+}
 
+.misPost-titulo h1 {
+    margin: auto;
+}
+
+.misPost-titulo p {
+    margin: auto;
 }
