--- a/src/styles/PostList.css
+++ b/src/styles/PostList.css
@@ -61,6 +61,7 @@
     max-width: 25%;
     min-width: 25%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    text-align: center;
 }
 
 .list-post-container:hover{
