Update season 3 :coffee:
- Desbloqueados los botones:
.Buscar empleado (admin)
.Dar de baja empleado (admin)
.Buscar sucursal (admin)
.Editar sucursal (admin)
.Dar de baja sucursal (admin)
.Ver trueques exitosos (admin)
.Ver trueques fallidos (admin)
.Ver ventas (admin)
.Ver listado de usuarios (admin)
.Bloquear usuario (admin)
.Desbloquear usuario (admin)
.Editar Perfil (Cliente)
- Detalle de Trueque ahora muestra que trueque estamos manejando
- Aumentado el tamaño de todos los contenedores que manejan empleados/administrador (A peticion de lichou) un 20%
- En el panel de Gestionar intercambio ahora aparece toda la informacion del trueque (Agredado por observacion de la profesora)
- Los cambios que antes de la demo 2 los implemente aca tambien
- Muchos cambios minimos

--- a/src/styles/CreateEmployee.css
+++ b/src/styles/CreateEmployee.css
@@ -11,6 +11,7 @@
     border-radius: 6px;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 20px 30px -10px;
+    transform: scale(1.2);
 }
 
 .employeeAdd-container form{
@@ -31,4 +32,8 @@
     justify-content: space-between;
     width: 100%;
     gap: 4px;
+}
+
+.employeeAdd-buttons button{
+    cursor: pointer;
 }
