--- a/src/styles/EmployeeDetail.css
+++ b/src/styles/EmployeeDetail.css
@@ -11,6 +11,7 @@
     border-radius: 6px;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 20px 30px -10px;
+    transform: scale(1.2);
 }
 
 .employeeDetail-container h1 {
@@ -32,4 +33,8 @@
     justify-content: space-between;
     width: 100%;
     gap: 4px;
+}
+
+.employeeDetail-buttons button{
+    cursor: pointer;
 }
