--- a/src/styles/EmployeeView.css
+++ b/src/styles/EmployeeView.css
@@ -7,6 +7,7 @@
     padding: 10px;
     margin-bottom: 50px;
     background: linear-gradient(to right,#a0a0a0, #c0c0c0);
+    border-bottom: 1px solid #000000;
 }
 
 .employee-nav-titulo {
