--- a/src/styles/Ventas.css
+++ b/src/styles/Ventas.css
@@ -1,11 +1,11 @@
-.user-container {
+.venta-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-.user-box {
+.venta-box {
     border: 1px solid black;
     background-color: #d3d3d3;
     border-radius: 6px;
@@ -20,27 +20,27 @@
 }
 
 
-.user-title {
+.venta-title {
     margin: auto;
 }
 
-.user-container hr{
+.venta-container hr{
     width: 100%;
 }
 
-.user-search{
+.venta-search{
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.user-search-input{
+.venta-search-input{
     flex: 1;
     width: 100%;
     margin-right: 10px;
 }
 
-.user-box-content {
+.venta-box-content {
     border: 1px solid black;
     border-radius: 4px;
     height: 60%;
@@ -49,25 +49,25 @@
     padding: 6px;
 }
 
-.user-select-box{
+.venta-select-box{
     padding: 2px;
     background-color: #dfdfdf;
     border: 1px solid black;
     margin-top: 2px;
 }
 
-.user-link{
+.venta-link{
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.user-link:hover{
+.venta-link:hover{
     background-color: #b7c8ff;
     transition: transform 0.1s ease;
 }
 
-.user-buttons {
+.venta-buttons {
     display: flex;
     align-self: flex-start;
     justify-content: space-between;
@@ -76,6 +76,6 @@
     gap: 4px;
 }
 
-.user-container button{
+.venta-container button{
     cursor: pointer;
 }
