--- a/src/styles/Users.css
+++ b/src/styles/Users.css
@@ -19,22 +19,25 @@
     transform: scale(1.2);
 }
 
+.user-select-box.selected {
+    background-color: #98add8;
+}
 
 .user-title {
     margin: auto;
 }
 
-.user-container hr{
+.user-container hr {
     width: 100%;
 }
 
-.user-search{
+.user-search {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.user-search-input{
+.user-search-input {
     flex: 1;
     width: 100%;
     margin-right: 10px;
@@ -49,20 +52,20 @@
     padding: 6px;
 }
 
-.user-select-box{
+.user-select-box {
     padding: 2px;
     background-color: #dfdfdf;
     border: 1px solid black;
     margin-top: 2px;
 }
 
-.user-link{
+.user-link {
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.user-link:hover{
+.user-link:hover {
     background-color: #b7c8ff;
     transition: transform 0.1s ease;
 }
@@ -76,6 +79,6 @@
     gap: 4px;
 }
 
-.user-container button{
+.user-container button {
     cursor: pointer;
 }
