--- a/src/styles/Sucursales.css
+++ b/src/styles/Sucursales.css
@@ -55,6 +55,12 @@
     background-color: #dfdfdf;
     border: 1px solid black;
     margin-top: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sucursales-select-box:hover{
+    background-color: #b7c8ff;
+    transition: transform 0.1s ease;
 }
 
 .sucursales-edit {
@@ -68,7 +74,6 @@
 .sucursales-select-box:hover .sucursales-edit {
     display: block;
 }
-
 
 .sucursales-link{
     display: block;
