--- a/src/styles/SucursalEdit.css
+++ b/src/styles/SucursalEdit.css
@@ -14,6 +14,11 @@
     transform: scale(1.2);
 }
 
+.sucursalEdit-info{
+    display: flex;
+    flex-direction: column;
+}
+
 .sucursalEdit-container h1 {
     margin-top: 5px;
 }
@@ -32,6 +37,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 4px;
+    margin-top: 10px;
 }
 
 .sucursalEdit-container button{
