--- a/src/styles/Users.css
+++ b/src/styles/Users.css
@@ -53,21 +53,38 @@
 }
 
 .user-select-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 2px;
     background-color: #dfdfdf;
     border: 1px solid black;
     margin-top: 2px;
 }
 
-.user-link {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
-.user-link:hover {
+.user-select-box:hover {
     background-color: #b7c8ff;
     transition: transform 0.1s ease;
+    cursor: pointer;
+}
+
+.user-box-mail {
+    flex: 1;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.user-box-isBlocked {
+    text-align: right;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+.user-isBlock {
+    display: none;
+    position: absolute;
+    right: 2px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .user-buttons {
