--- a/src/styles/PostDetailStyle.css
+++ b/src/styles/PostDetailStyle.css
@@ -148,6 +148,7 @@
     color: black;
     width: 21rem;
     transition: transform 0.3s ease;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .botones button:hover {
@@ -230,4 +231,68 @@
     border-radius: 15px;
     padding: 2%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+
+.solicitudes-btn {
+    position: fixed;
+    top: 2%;
+    right: 2%;
+    z-index: 999;
+    background-color: #bf4c41;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.solicitudes-btn:hover {
+    background-color: #c56d65;
+}
+
+.highlight-btn{
+    position: fixed;
+    top: 7%;
+    right: 2%;
+    z-index: 999;
+    background-color: #bf4c41;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.highlight-btn:hover {
+    background-color: #c56d65;
+}
+
+.delete-btn {
+    position: fixed;
+    top: 2%;
+    left: 2%;
+    z-index: 999;
+    background-color: #bf4c41;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.delete-btn:hover {
+    background-color: #c56d65;
 }
