--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -39,10 +39,10 @@
     height: 100px;
     background-color: #f2ada7;
     z-index: 10;
-    background: linear-gradient(to right,#f2ada7, #f7c2bd);
+    background: linear-gradient(to right, #f2ada7, #f7c2bd);
 }
 
-.menuItems{
+.menuItems {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -607,7 +607,7 @@ a:hover {
     background-color: #cecece;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-  
+
 .menuItems .profile-picture {
     max-width: 100%;
     max-height: 100%;
@@ -651,7 +651,7 @@ a:hover {
     }
 }
 
-.notification-bn{
+.notification-bn {
     position: fixed;
     top: 4vh;
     left: 72%;
@@ -668,10 +668,10 @@ a:hover {
     cursor: pointer;
     border: none;
     transition: transform 0.3s ease;
-    
+
 }
 
-.notification-bn:hover{
+.notification-bn:hover {
     background-color: #f2f0e4;
     color: #bf4c41;
     transition: color 0.2s;
@@ -679,13 +679,14 @@ a:hover {
     transition: transform 0.3s ease;
 }
 
-.notifications-container{
+.notifications-container {
     position: absolute;
+
     left: 47%;
     top: 100%;
     width: 34em;
     overflow-y: auto;
-    overflow-x:hidden;
+    overflow-x: hidden;
     background-color: white;
     padding: 1%;
     z-index: 100;
@@ -700,19 +701,28 @@ a:hover {
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
-    
-    
+    position: relative;
+    /* Necesario para que el botón se posicione correctamente */
+
 }
 
 .read-btn {
+
     padding: 1% 3%;
     border-radius: 15%;
     border: none;
-    background-color: #bf4c41; /* Color base */
+    background-color: #bf4c41;
+    /* Color base */
     cursor: pointer;
+    color: white;
 }
 
-.read-btn.read {
-    background-color: #4caf50; /* Color verde cuando la notificación está leída */
+.notification-item.read {
+    background-color: #ffffff69;
+    /* Color para notificaciones leídas */
 }
 
+.notification-item.unread {
+    background-color: #fff;
+    /* Color para notificaciones no leídas */
+}
