--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -708,7 +708,9 @@ a:hover {
 }
 
 .read-btn {
-
+    position:absolute;
+    left: 90%;
+    transition: transform 0.3s ease;
     padding: 1% 3%;
     border-radius: 15%;
     border: none;
